Warning for non-tx reads of data was added.